--- a/accueil.html
+++ b/accueil.html
@@ -1,39 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- Google Font Poppins -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <!-- Font Awesome pour les icônes -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Landing Page</title>
 </head>
 <body>
     <header>
-        <nav>
+        <nav id="navbar">
             <h1>Kucra</h1>
-            <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">FEATURES</a></li>
-                <li><a href="#">CLIENT</a></li>
-                <li><a href="#">PRICING</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">CONTACT</a></li>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#features">FEATURES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#client">CLIENT</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#price">PRICING</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#faq">FAQ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">ABOUT</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#blog">BLOG</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">CONTACT</a>
+                </li>
             </ul>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <ul class="nav-icon">
+                <li class="nav-icon-list">
+                    <a href="#" class="link-icon">
+                        <i class="mdi mdi-facebook"></i>
+                    </a>
+                </li>
+                <li class="nav-icon-list">
+                    <a href="#" class="link-icon">
+                        <i class="mdi mdi-twitter"></i>
+                    </a>
+                </li>
+                <li class="nav-icon-list">
+                    <a href="#" class="link-icon">
+                        <i class="mdi mdi-instagram"></i>
+                    </a>
+                </li>
+            </ul>  
         </nav>
     </header>
-    <main>
 
-    </main>
-    <aside>
+    <section class="hero">
+        <div class="hero-content">
+            <h1>We are StartUp<br>
+                Creative Kucra<br>
+                Agency
+            </h1>
+            <p>Carefully crafted after analysing the needs of<br>
+               different industries and design achieves a <br>
+               great balance between purpose & presentation
+            </p>
+            <form id="newsletter-form">
+                <div class="input-container">
+                    <input type="email" id="email" placeholder="Enter your email" required>
+                <button type="submit" id="subscribe-btn">SUBSCRIBE</button>
+                </div>
+            </form>
+        </div>
+        <div class="hero-img">
+            <img src="illustration.svg" alt=" Illustration image">
+        </div>
 
-    </aside>
+    </section>
+
+    <section class="cards-section">
+        <div class="card">
+            <i class=""></i>
+            <h3>Digital Design</h3>
+            <p></p>
+        </div>
+        <div class="card">
+            <i class=""></i>
+            <h3>Unlinited Colors</h3>
+            <p></p>
+        </div>
+        <div class="card">
+            <i class=""></i>
+            <h3>Strategy Solutions</h3>
+            <p></p>
+        </div>
+    </section>
+    
     <footer>
 
     </footer>
     
 </body>
 </html>
+
