--- a/accueil.html
+++ b/accueil.html
@@ -43,17 +43,17 @@
             <ul class="nav-icon">
                 <li class="nav-icon-list">
                     <a href="#" class="link-icon">
-                        <i class="mdi mdi-facebook"></i>
+                        <i class="fa-brands fa-facebook-f"></i>
                     </a>
                 </li>
                 <li class="nav-icon-list">
                     <a href="#" class="link-icon">
-                        <i class="mdi mdi-twitter"></i>
+                        <i class="fa-brands fa-twitter"></i>
                     </a>
                 </li>
                 <li class="nav-icon-list">
                     <a href="#" class="link-icon">
-                        <i class="mdi mdi-instagram"></i>
+                        <i class="fa-brands fa-instagram"></i>
                     </a>
                 </li>
             </ul>  
@@ -78,26 +78,65 @@
             </form>
         </div>
         <div class="hero-img">
-            <img src="illustration.svg" alt=" Illustration image">
+            <img src="/illustration.svg" alt=" Illustration image">
         </div>
 
     </section>
 
+    <div class="features-content">
+        <h2>Products Features</h2>
+        <p>It is a long etablished fact that a reader will be of a page when etablished fact looking at its layout.</p>
+    </div>
     <section class="cards-section">
         <div class="card">
-            <i class=""></i>
+            <i class="fa-duotone fa-solid fa-globe"></i>
             <h3>Digital Design</h3>
-            <p></p>
+            <p>Some quick example text to bulid on the card title and make up the bulk of the card the platform.</p>
         </div>
         <div class="card">
-            <i class=""></i>
+            <i class="fa-solid fa-brush"></i>
             <h3>Unlinited Colors</h3>
-            <p></p>
+            <p>Credubly brand standard compliant user exteible services College Anibh ocean euismod tincidunt laoreet.</p>
         </div>
         <div class="card">
-            <i class=""></i>
+            <i class="fa-solid fa-chess"></i>
             <h3>Strategy Solutions</h3>
-            <p></p>
+            <p>Separated they live in Bookmarks grove right at the coast of the Semantics, a large ocean regelialia.</p>
+        </div>
+    </section>
+
+    <div class="equipe-cards">
+        <h2>We're dunamic team of talented people of innovation & marketing expert</h2>
+        <p>To achive this, it would be necessary to have uniform grammar, pronunciation and more common words. If several languages of the resulting language.</p>
+    </div>
+    <section class="container-equipe">
+        <div class="eq-card">
+            <h3>1499 +</h3>
+            <p>Complete Projects</p>
+            <img src="/img_landingPage/person1.png" alt="Anna">
+            <h4>Anna G. Wilhite</h4>
+            <p>CEO/Founder</p>
+        </div>
+        <div class="eq-card">
+            <h3>1080 K</h3>
+            <p>Satisfied Clients</p>
+            <img src="/img_landingPage/person2.png" alt="William">
+            <h4>William S. Blay</h4>
+            <p>CTO/Co-Founder</p>
+        </div>
+        <div class="eq-card">
+            <h3>608</h3>
+            <p>Team Mmebers</p>
+            <img src="/img_landingPage/person3.png" alt="Maria">
+            <h4>Maia B. Morales</h4>
+            <p>Web Designer</p>
+        </div>
+        <div class="eq-card">
+            <h3>252</h3>
+            <p>Employee</p>
+            <img src="/img_landingPage/person4.png" alt="Luke">
+            <h4>Luke L. Johnston</h4>
+            <p>Wen Developer</p>
         </div>
     </section>
     
